[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/bar/bar-stool.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/BabySpawner.gd" type="Script" id=2]

[node name="BabySpawner" type="Node2D"]
script = ExtResource( 2 )

[node name="Seat" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpawnPosition" type="Position2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
